--- a/src/Editor/styles/editor.css
+++ b/src/Editor/styles/editor.css
@@ -1,10 +1,9 @@
 body {
   background-color: var(--color-gray-100);
   color: var(--color-gray-800);
-  width: 100%;
 }
 
-main {
+main.editor {
   width: min(60ch, calc(100% - 2rem));
   margin: 4rem auto;
 }
@@ -29,6 +28,10 @@ main {
   font-size: 2.5rem;
   font-weight: 700;
   background: none;
+  padding: 0;
+  display: block;
+  box-sizing: border-box;
+  max-width: 100%;
 
   &::placeholder {
     color: var(--color-gray-400);
@@ -45,15 +48,4 @@ main {
   background-color: rgba(225, 255, 0, 0.1);
   border: 1px solid rgb(248, 255, 173);
   padding: 0.1rem;
-}
-
-#change {
-  color: var(--color-gray-400);
-  border-bottom: 1px solid var(--color-gray-200);
-  font-variant-numeric: tabular-nums;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding: 0.5rem;
 }
