--- a/src/features/settings/Settings.css
+++ b/src/features/settings/Settings.css
@@ -31,6 +31,8 @@
         border-bottom: 1px solid var(--color-gray-100);
     }
 
+
+
     a {
         color: inherit;
         text-decoration: none;
@@ -38,6 +40,7 @@
         display: flex;
         justify-content: space-between;
         padding: 0.5rem;
+        border-radius: 0.5rem;
     }
 
 }
@@ -52,7 +55,7 @@ h1 {
     box-shadow: hsl(50, 100%, 71%, 0.03) 0px 8px 24px;
     padding: 1rem;
     border-radius: 1rem;
-    margin-block: 1rem;
+    margin-bottom: 1rem;
     display: grid;
     grid-template-columns: auto 1fr;
     column-gap: 0.75rem;
@@ -95,4 +98,19 @@ h1 {
     opacity: 0;
     margin: 0;
     pointer-events: none;
+}
+
+
+section {
+    margin-block: 1rem;
+    padding-block: 1rem;
+
+    > h3 {
+        color: var(--color-gray-500);
+        text-transform: uppercase;
+        font-weight: 400;
+        border-top: 1px solid var(--color-gray-200);
+        padding-block: 1rem;
+        font-size: 0.875rem;
+    }
 }
