--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ h6 {
   --color-gray-950: oklch(0.129 0 264.695);
 
   /* Warning (Yellow/Amber) */
-  --color-warning-100: oklch(0.95 0.15 85);
+  --color-warning-100: oklch(80.877% 0.17029 75.348);
   --color-warning-200: oklch(0.85 0.18 85);
   --color-warning-300: oklch(0.75 0.2 85);
   --color-warning-400: oklch(0.65 0.22 85);
@@ -119,7 +119,7 @@ h6 {
   --color-info-400: oklch(0.65 0.22 250);
 
   /* Success (Green) */
-  --color-success-100: oklch(0.95 0.15 135);
+  --color-success-100: oklch(82.497% 0.2349 136.845);
   --color-success-200: oklch(0.85 0.18 135);
   --color-success-300: oklch(0.75 0.2 135);
   --color-success-400: oklch(0.65 0.22 135);
@@ -160,7 +160,7 @@ h6 {
     --color-info-400: oklch(0.45 0.26 250);
 
     /* Success */
-    --color-success-100: oklch(0.75 0.2 135);
+    --color-success-100: oklch(62.9% 0.18346 136.27);
     --color-success-200: oklch(0.65 0.22 135);
     --color-success-300: oklch(0.55 0.24 135);
     --color-success-400: oklch(0.45 0.26 135);
