fix: update dependencies and remove unused plugins
- downgraded @handlewithcare/react-prosemirror from 2.4.11 to 2.4.3
- added fast-equals dependency
- refactored imports in Editor components to simplify paths
- removed unused abbreviation and autoclosing plugins
- updated settings components to include new hotkeys settings
- improved settings UI with descriptions for switches
- added versioning to default settings
- implemented throttling for localStorage updates in useSettings hook
- added new HotkeysSettings component

--- a/src/features/settings/SettingsLayout.css
+++ b/src/features/settings/SettingsLayout.css
@@ -1,7 +1,7 @@
 .settings-breadcrumbs {
     width: fit-content;
     display: flex;
-    padding: 1rem;
+    padding-block: 1rem;
 
     span {
         display: flex;
@@ -27,63 +27,12 @@ h1 {
     margin-bottom: 0.5rem;
 }
 
-.callout {
-    background-color: var(--color-gray-150);
-    border: 1px solid var(--color-gray-200);
-    box-shadow: hsl(50, 100%, 71%, 0.03) 0px 8px 24px;
-    padding: 1rem;
-    border-radius: 1rem;
-    margin-bottom: 1rem;
-    display: grid;
-    grid-template-columns: auto 1fr;
-    column-gap: 0.75rem;
-    align-items: center;
-    transition-behavior: allow-discrete;
-    transition: all 0.2s cubic-bezier(0.075, 0.82, 0.165, 1);
-    height: calc-size(auto);
-
-    @starting-style {
-        margin: 0;
-        transform: scale(0.8);
-        opacity: 0;
-        height: 0;
-    }
-
-    h3 {
-        grid-column: 2;
-    }
-
-    p {
-        grid-column: 2;
-    }
-
-    svg {
-        transform: scale(0.8);
-    }
-
-    &:is(.warning) svg,
-    &:is(.warning) h3 {
-        color: var(--color-warning-100);
-    }
-}
-
-.callout:not(.visible) {
-    transition-behavior: allow-discrete;
-    transition: height 0.2s cubic-bezier(0.075, 0.82, 0.165, 1) ;
-    transform-origin: center bottom;
-    padding: 0;
-    height: 0;
-    opacity: 0;
-    margin: 0;
-    pointer-events: none;
-}
-
 
 section {
     margin-block: 1rem;
     padding-block: 1rem;
 
-    > h3 {
+    >h3 {
         color: var(--color-gray-500);
         text-transform: uppercase;
         font-weight: 400;
