--- a/src/Editor/styles/editor.css
+++ b/src/Editor/styles/editor.css
@@ -1,8 +1,3 @@
-body {
-  background-color: var(--color-gray-100);
-  color: var(--color-gray-800);
-}
-
 main.editor {
   width: min(60ch, calc(100% - 2rem));
   margin: 4rem auto;
@@ -12,10 +7,15 @@ main.editor {
   content: attr(data-placeholder);
   user-select: none;
   display: inline-block;
-  position: absolute;
-  top: 0;
 
   color: var(--color-gray-400);
+}
+
+.empty {
+  display: inline-block;
+  br {
+    display: none;
+  }
 }
 
 [contenteditable],
@@ -40,12 +40,4 @@ main.editor {
   &:focus {
     outline: none;
   }
-}
-
-
-.paired-char {
-  color: rgb(248, 255, 173);
-  background-color: rgba(225, 255, 0, 0.1);
-  border: 1px solid rgb(248, 255, 173);
-  padding: 0.1rem;
 }
