--- a/src/component/settings.css
+++ b/src/component/settings.css
@@ -7,8 +7,8 @@
 
     >* {
         padding: 0.5rem;
-        text-transform: capitalize;
         display: flex;
+        flex-wrap: wrap;
         align-items: center;
         justify-content: space-between;
     }
@@ -40,6 +40,13 @@ input {
     &:focus-visible {
         outline: 2px solid var(--color-gray-700);
     }
+}
+
+.description {
+    color: var(--color-gray-500);
+    font-size: 0.875rem;
+    max-width: 60ch;
+    flex: 100%;
 }
 
 
@@ -114,7 +121,6 @@ input {
     header {
         background-color: var(--color-gray-150);
         display: grid;
-        grid-template-columns: 20% 1fr;
         padding: 1rem;
         border-top-left-radius: var(--radius);
         border-top-right-radius: var(--radius);
@@ -126,7 +132,6 @@ input {
 
     fieldset {
         display: grid;
-        grid-template-columns: 20% 1fr;
         border: none;
         padding: 0;
 
