feat: remove roadmap and implement plugin improvements
- Deleted the roadmap.md file as it is no longer needed.
- Updated ProseMirrorDispatcher to use queueMicrotask for dispatching updates.
- Enhanced abbreviationPlugin to support case matching and space insertion after abbreviation expansion.
- Refactored settings components to improve layout and accessibility.
- Introduced new default settings and schema validation for abbreviation settings.
- Removed deprecated defaultSettings.json and replaced it with default.json and schema.json.
- Added validation logic to ensure settings conform to the defined schema.
- Improved styling across various components for better user experience.

--- a/src/component/settings.css
+++ b/src/component/settings.css
@@ -3,7 +3,6 @@
     padding: 0.5rem;
     background-color: var(--color-gray-150);
     border-radius: 1rem;
-    margin-top: 1rem;
 
     >* {
         padding: 0.5rem;
@@ -25,6 +24,7 @@
         display: flex;
         width: 100%;
         justify-content: space-between;
+        text-transform: capitalize;
     }
 }
 
@@ -35,7 +35,6 @@ input {
     padding: 0;
     border-radius: 0.25rem;
     font-size: 1rem;
-
 
     &:focus-visible {
         outline: 2px solid var(--color-gray-700);
@@ -127,6 +126,10 @@ input {
 
         h4 {
             font-weight: 400;
+
+            &:not(:first-of-type) {
+                padding-left: 0.5rem;
+            }
         }
     }
 
@@ -153,7 +156,7 @@ input {
         label:first-of-type input {
             border-bottom-left-radius: 1rem;
         }
-    }           
+    }
 
     label {
         font-size: 0;
